src/test/ui/regions/regions-outlives-projection-container-hrtb.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/regions-outlives-projection-container-hrtb.rs:32:12
   |
LL |     let _: &'a WithHrAssoc<TheType<'b>> = loop { };
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: not reporting region error due to nll
  --> $DIR/regions-outlives-projection-container-hrtb.rs:53:12
   |
LL |     let _: &'a WithHrAssocSub<TheType<'b>> = loop { };
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: compilation successful
  --> $DIR/regions-outlives-projection-container-hrtb.rs:58:1
   |
LL | / fn main() {
LL | | }
   | |_^

error: aborting due to previous error

